# txt2epub

./: .gitignore  CLAUDE.md  README.md  build_exe.bat  build_exe.py  build_gui.py  pyproject.toml  test_regex.py  txt2epub.py  txt2epub_gui.py  txt2epub_gui.spec
utils/: epub_builder.py  logger.py  txt_reader.py
