[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txt2epub"
version = "0.1.0"
description = "TXT 转 EPUB 电子书工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "ebooklib>=0.19",
    "pillow>=9.0.0",
    "charset-normalizer>=3.4.3",
    "pyinstaller>=6.15.0",
]

[project.scripts]
txt2epub = "txt2epub:main"
txt2epub-gui = "txt2epub_gui:main"

[tool.setuptools.packages.find]
include = ["utils*"]
